<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/normal_margin"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/username"
        android:theme="@style/TextTitle" />

    <EditText
        android:id="@+id/edt_user_name"
        android:background="@drawable/border_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"
        android:textCursorDrawable="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/password"
        android:theme="@style/TextTitle" />

    <EditText
        android:id="@+id/edt_pass_word"
        android:background="@drawable/border_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/signUp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/login"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>