<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img_avatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:failureImage="@drawable/ic_avatar"
            app:placeholderImage="@drawable/ic_avatar"
            app:placeholderImageScaleType="centerCrop"
            app:roundAsCircle="true" />

        <TextView
            android:id="@+id/txt_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="@dimen/medium_margin"
            android:paddingRight="@dimen/medium_margin"
            android:theme="@style/TextTitle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin"
        tools:context=".fragment.LoginFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/username"
            android:theme="@style/TextTitle" />

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/border_shape"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textCursorDrawable="@null"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/email"
            android:theme="@style/TextTitle" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/border_shape"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

        <RelativeLayout
            android:id="@+id/edit_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/delete_btn_background"
                android:text="@string/delete"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/normal_btn_background"
                android:text="@string/update"
                android:textAllCaps="false"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>